# eflexcan2mqtt

./: .gitignore  Dockerfile_aarch64  Dockerfile_x86_64  LICENSE.txt  README.md  eflexcan2mqtt.spec  main.py  pyproject.toml  requirements.txt  sample-battery-data.json
conf/: eflexcan2mqtt.ini  eflexcan2mqtt.ini.dist
eflexcan2mqtt/: __init__.py  decode.py  message_handler.py  mqtt_client.py  mqtt_publisher.py  paho_client.py
scripts/: build_aarch64.sh  build_x86_64.sh  eflexcan2mqtt.service  install.sh
tests/: conftest.py  mock_mqtt_client.py  test_decode.py  test_message_handler.py  test_mqtt_publisher.py
